# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg  setup.py
dev_hooks/: __init__.py  color.py  crlf_to_lf.py  transform_encoding.py  vcpkg_format.py
