[metadata]
name = dev_hooks
version = 1.0.1
description = Automatically convert and restore file encoding
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/beichenzhizuoshi/pre-commit-hooks
author = beichenzhizuoshi
author_email = beichenzhizuoshi@163.com
license = MIT
license_file = LICENSE
license_files = [LICENSE]
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    PyYAML
    chardet
python_requires = >=3.7

[options.entry_points]
console_scripts =
    dev-hooks-transcoding = dev_hooks.transform_encoding:main
    dev-hooks-newline = dev_hooks.crlf_to_lf:main

[bdist_wheel]
universal = True
